[package]
name = "asserteq_pretty"
version = "0.0.4"
edition = "2018"
license = "MIT"
repository = "https://github.com/chordtoll/asserteq_pretty"
description = "An assert_eq macro that prints more helpful diffs on mismatch"

[package.metadata]
msrv = "1.32.0"

[dependencies]
seq-macro = "0.3.3"
asserteq_pretty_macros = {version="0.0.4", path="../asserteq_pretty_macros"}
